--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
 
     {{content-for 'head'}}
 
+
+    <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/dashboard.css">
 
