--- a/app/index.html
+++ b/app/index.html
@@ -9,18 +9,20 @@
 
     {{content-for 'head'}}
 
-
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/dashboard.css">
+    <link href="assets/demo.css" rel="stylesheet" />
+    <link href="assets/jquery.gridster.min.css" rel="stylesheet" />
 
     {{content-for 'head-footer'}}
   </head>
   <body>
     {{content-for 'body'}}
-
     <script src="assets/vendor.js"></script>
     <script src="assets/dashboard.js"></script>
+    <script src="assets/jquery.gridster.js" type="text/javascript" charset="utf-8"></script>
+
 
     {{content-for 'body-footer'}}
   </body>
