added list modification with grdister

--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,8 @@
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/dashboard.css">
-    <!-- <link href="assets/demo.css" rel="stylesheet" />
-    <link href="assets/jquery.gridster.min.css" rel="stylesheet" /> -->
+    <link href="assets/demo.css" rel="stylesheet" />
+    <link href="assets/jquery.gridster.min.css" rel="stylesheet" />
 
     {{content-for 'head-footer'}}
   </head>
@@ -21,7 +21,7 @@
     {{content-for 'body'}}
     <script src="assets/vendor.js"></script>
     <script src="assets/dashboard.js"></script>
-    <!-- <script src="assets/jquery.gridster.js" type="text/javascript" charset="utf-8"></script> -->
+    <script src="assets/jquery.gridster.js" type="text/javascript" charset="utf-8"></script>
 
 
     {{content-for 'body-footer'}}
