--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     {{content-for 'head'}}
 
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/login.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/dashboard.css">
     <link href="assets/demo.css" rel="stylesheet" />
